# desktop-oss

./: .gitignore  AGENTS.md  CLAUDE.md  PLAN.md  README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: claude-code-review.yml  claude.yml  release.yml
scripts/: install-git-hooks.mjs  setup-worktree.sh
scripts/hooks/: post-checkout
sidecar/: stage.mjs
sidecar/claude-agent/: index.mjs  package-lock.json  package.json
sidecar/cursor-agent/: .gitignore  index.mjs  package-lock.json  package.json
src/: app.html
src-tauri/: Cargo.toml  rust-toolchain.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 0001_initial.sql  0002_delegate_orchestration.sql  0003_adapter_session_id.sql  0004_session_directory.sql  0005_module_state.sql  0006_delegate_role.sql  0007_dual_surface.sql  0008_completion_notified.sql
src-tauri/src/: lib.rs  main.rs  skills.rs  tui.rs
src/lib/adapters/: anthropic-ai-sdk.ts  anthropic.ts  claude-code-fingerprint.ts  claude-code-sdk.ts  codex-mcp.ts  cursor.ts  index.ts  mcp-stdio-client.ts  native-fetch.ts  openai-compatible.ts  presets.ts
src/lib/agent/: completion-sweep.test.ts  completion-sweep.ts  deferred-tools.ts  delegate-prompt.test.ts  delegate-prompt.ts  delegate.ts  format-error.ts  history-projection.test.ts  history-projection.ts  loop.ts  prompt-cache.ts  prompts.ts  run-chunks-to-turns.ts  run-events.test.ts  tools.ts
src/lib/api/: health.ts  (+1 more)
src/routes/: +layout.svelte  +layout.ts  +page.svelte  +page.ts
(+145 files in other folders)
