[package]
name = "desktop-oss"
version = "0.1.0"
description = "Open-source orchestrator-and-agents chat desktop app"
edition = "2021"

[lib]
name = "desktop_oss_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
base64 = "0.22"
dirs = "5"
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls", "json"] }
futures-util = "0.3"
tokio = { version = "1", features = ["process", "io-util", "rt"] }
notify = "6"
notify-debouncer-mini = "0.4"
